# xlineparse

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
python/xlineparse/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_xlineparse.py
