[package]
authors = ["Oliver Russell <ojhrussell@gmail.com>"]
name = "xlineparse"
version = "0.0.1"

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "chrono", "rust_decimal"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
chrono = "0.4.31"
chrono-tz = "0.9.0"
rust_decimal = "1.33.1"

[lib]
name = "xlineparse"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]

[profile.dev]
# opt-level = 0
# debug = 2
# split-debuginfo = "unpacked"
opt-level = 3

[profile.release]
opt-level = 3

[profile.test]
opt-level = 3
